# PostProcessing

./: .flake8  .gitignore  README.md  dependabot.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  formatting.yaml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: formatting.yaml  install_test.yaml  test_matplotlib.yaml
doc/: .readthedocs.yaml  conf.py  imag_scraper.py  index.rst  parse_fonts.py  refs.bib  setup_kaleido.py
doc/developer_docs/: api.rst  code_style.rst
doc/matplotlib/: index.rst  parse_fonts.py  styles.rst
doc/paraview/: distribution_force.rst  extract_geometry.rst  index.rst  slicesCP.rst
doc/plotly/: index.rst  styles.rst
doc/source/: conf.py  index.rst
doc/source/developer_docs/: api.rst  code_style.rst  index.rst
doc/source/matplotlib/: index.rst  styles.rst
doc/source/paraview/: distributionForce.rst  distributionGeometry.rst  distribution_force.rst  distribution_geometry.rst  extract_geometry.rst  index.rst  slicesCP.rst
examples/matplotlib/: README.rst  plot_demo_style_colors.py  plot_demo_styles.py  plot_matplotlib_demo_style_colors.py  plot_matplotlib_demo_styles.py
examples/plotly/: README.rst  plot_plotly_demo_style_colors.py  plot_plotly_demo_styles.py
input_data/: get_data.sh
postprocessing/: utils.py
postprocessing/matplotlib/: __init__.py  utils.py
postprocessing/matplotlib/styles/: doumont-dark.mplstyle  doumont-light.mplstyle
postprocessing/paraview/: distributions.py  geometry.py  slices.py  utils.py
postprocessing/plotly/: __init__.py  utils.py
postprocessing/plotly/styles/: doumont-dark.json  doumont-light.json
scripts/: install_fonts.sh
tests/matplotlib/: test_images.py  test_matplotlib_images.py
tests/plotly/: test_plotly_images.py
