[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "postprocessing"
dynamic = ["version"]
description = "Tools for post-processing aerospace optimization problems."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Bernardo Pacini", email = "bpacini@umich.edu" },
]
keywords = [
    "post-processing",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy<2",
    "scipy",
]

[project.optional-dependencies]
all = [
    "postprocessing[doc,style]",
]
doc = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-argparse",
    "sphinx-prompt",
    "sphinx-autoapi",
    "sphinxcontrib-bibtex",
    "numpydoc",
]
style = [
    "black==24.4.2",
    "flake8==7.1.0",
]

[project.scripts]
pv_generate_force_distribution = "postprocessing.paraview.distributions:generate_force_distribution_cmd"
pv_generate_geometry_distribution = "postprocessing.paraview.distributions:generate_geometry_distribution_cmd"
pv_generate_slices_cp = "postprocessing.paraview.slices:generate_slices_cp_cmd"

[tool.hatch.version]
path = "postprocessing/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/postprocessing",
]
