[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "postprocessing"
dynamic = ["version"]
description = "Tools for post-processing aerospace optimization problems."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Bernardo Pacini", email = "bpacini@umich.edu" },
]
keywords = [
    "post-processing",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "kaleido",
    "matplotlib",
    "numpy<3",
    "pillow",
    "plotly",
    "scipy",
]

[project.optional-dependencies]
all = [
    "postprocessing[doc,test,style]",
]
doc = [
    "sphinx",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-argparse",
    "sphinx-prompt",
    "sphinx-autoapi",
    "sphinx-gallery",
    "sphinxcontrib-bibtex",
    "numpydoc",
]
test = [
    "testflo",
    "parameterized",
    "gdown",
    "scikit-image",
    "pillow",
]
style = [
    "black==25.1.0",
    "flake8==7.3.0",
]

[project.scripts]
pv_extract_geometry = "postprocessing.paraview.geometry:extract_geometry_cmd"
pv_force_distribution = "postprocessing.paraview.distributions:force_distribution_cmd"
pv_geometry_distribution = "postprocessing.paraview.distributions:geometry_distribution_cmd"
pv_slices_cp = "postprocessing.paraview.slices:slices_cp_cmd"

[tool.hatch.version]
path = "postprocessing/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/postprocessing",
]
